# haloobot2

./: .env.sample  .gitignore  Cargo.toml  readme.md
gcal_oauth_page/: index.html
src/: argument_parser.rs  autoreplies.rs  chat_config.rs  command_handler.rs  db.rs  google.rs  main.rs  message_handler.rs  scheduler.rs  subscriptions.rs  telegram_utils.rs
src/handlers/: autoreply.rs  config.rs  dude_carpet.rs  fingerpori.rs  fokit.rs  get_excuse.rs  google.rs  hs.rs  lasaga.rs  mod.rs  subscription.rs
src/sql/: create_db.sql
