[package]
name = "haloobot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
nom = "7.1.1"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1.5.6"
reqwest = "0.11.10"
rusqlite = { version = "0.27.0", features = ["chrono", "bundled", "serde_json"] }
scraper = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.9.1", features = ["macros", "auto-send", "ctrlc_handler"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
